--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,11 +1,88 @@
 #root {
-  max-width: 1280px;
+  width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  background-image: url(./assets/Fondo.png);
+  background-size: cover;
+  background-position: center;
 }
 
-.logo {
+.arra {
+  width: 100%;
+  height: 500px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +116,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
