--- a/front/src/components/ContenedorPrincipal/Contenedor.module.css
+++ b/front/src/components/ContenedorPrincipal/Contenedor.module.css
@@ -1,6 +1,63 @@
 .container {
+    margin-top: 100px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1200px 500px;
+    align-items: center;
     width: 100%;
     height: 100vh;
+    gap: 100px;
+    
+    ::-webkit-scrollbar{
+        width: 3px;
+    }
+    ::-webkit-scrollbar-thumb{
+        background-color: white;
+    }
+    overflow: hidden;
+    overflow-x: hidden;
 }
+.containerPadre {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    background-image: ;
+    margin: 0 auto;
+    text-align: center;
+    background-image: url(./assets/Fondo.png);
+    background-size: cover;
+    background-position: center;
+}
+
+
+.orden{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 50%;
+    height: 300px;
+}
+
+.tarjetas {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.contenedorTarjetas{
+    display: grid;
+    padding-top: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-top: 0px;
+    margin-left: 0px;
+    height: 700px;
+    overflow-x: visible; /* Permite el desbordamiento horizontal (izquierda y derecha) */
+    overflow-y: auto;
+}
+
+.containerTv {
+    justify-content: center;
+    width: 900px;
+    grid-column: 2/3;
+    padding-top: 20%;
+    overflow: hidden;
+}
+
