--- a/front/src/components/VistaPrevisa/VistaPrevia.module.css
+++ b/front/src/components/VistaPrevisa/VistaPrevia.module.css
@@ -22,16 +22,26 @@
     overflow: hidden;
 }
 .container {
-    width: fit-content;
-    height: 205px;
+    width: fit-content ;
+    height: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
 }
+.container:hover{
+    transform: scale(1.2) rotate(5deg);
+    box-shadow: 0px 4px 50px 0px #FFF;
+    z-index: 100;
+}
+
+
+
 .borrar {
     right: 6px;
-    top:10px;
+    top:-2px;
     padding: 0;
     display: flex;
     align-items: center;
@@ -50,3 +60,4 @@
 .borrar:hover {
     background-color: rgb(255, 115, 115);
 }
+
