--- a/front/src/components/reproductor/reproductor.module.css
+++ b/front/src/components/reproductor/reproductor.module.css
@@ -78,3 +78,11 @@ video::-webkit-media-controls {
     align-items: center;
     gap: 1px;
 }
+
+.botonFav{
+    width: 30px;
+    height: 40px;
+    background-color: blue;
+    z-index: 100;
+}
+
