--- a/front/src/components/Nav/Nav.module.css
+++ b/front/src/components/Nav/Nav.module.css
@@ -73,3 +73,19 @@
     color: #515151;
     width: 300pxpx;
 }
+
+.buttonsLogout {
+    all: initial;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 100px;
+    height: 40px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: none;
+    color: #515151;
+    transition: 0.3s;
+    font-family: "roc-grotesk";
+    font-weight: 600;
+}
