--- a/front/src/components/reproductor/reproductor.module.css
+++ b/front/src/components/reproductor/reproductor.module.css
@@ -80,9 +80,13 @@ video::-webkit-media-controls {
 }
 
 .botonFav{
-    width: 30px;
-    height: 40px;
+    margin-top: 100px;
+    margin-left: 380px;
+    position: absolute;
+    width: 50px;
+    height: 100px;
     background-color: blue;
+    opacity: 0;
     z-index: 100;
 }
 
