--- a/front/src/styles.module.css
+++ b/front/src/styles.module.css
@@ -25,7 +25,7 @@
     height: 100vh;
     align-items: center;
     justify-content: center;
-    
+
 }
 
 .mensajeImg {
@@ -56,3 +56,8 @@
     position: relative;
 }
 
+.login {
+    width: 100%;
+    height: 100vh;
+    background-image: url(./assets/LOGIN.jpg);
+}
