--- a/front/src/styles.module.css
+++ b/front/src/styles.module.css
@@ -16,15 +16,21 @@
     text-align: center;
     background-size: cover;
     background-position: center;
+    z-index: 1;
+}
+
+.style.aboutContainer{
+    display: flex;
+    
 }
 
 .fondoAbout {
     display: flex;
     background-color: rgb(16, 16, 16, 0.6);
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 
 }
 
@@ -60,4 +66,8 @@
     width: 100%;
     height: 100vh;
     background-image: url(./assets/LOGIN.jpg);
+}
+
+.loaderComp{
+    z-index: 20;
 }
